--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 			  <!-- Company -->
 			  <li class="nav-link" style="--i: .85s">
-				<a href="pages/about.html">About Us</a>
+				<a href="about.html">About Us</a>
 		<!--	<div class="dropdown">
 				  <ul>
 					<li class="dropdown-link">
@@ -65,7 +65,7 @@
 				<div class="dropdown">
 				  <ul>
 					<li class="dropdown-link">
-					  <a href="pages/marketing.html">Digital Marketing</a>
+					  <a href="marketing.html">Digital Marketing</a>
 					<!--  <div class="dropdown second">
 						<ul>
 						  <li class="dropdown-link"><a href="#">Search Engine Optimization (SEO)</a></li>
@@ -85,7 +85,7 @@
 					  </div> -->
 					</li>
 					<li class="dropdown-link">
-					  <a href="pages/developer.html">Software Development</a>
+					  <a href="developer.html">Software Development</a>
 			<!--	  <div class="dropdown second">
 						<ul>
 						  <li class="dropdown-link"><a href="#">Website Development</a></li>
@@ -104,7 +104,7 @@
 				<a href="#">Blogs<i class="fas fa-caret-down"></i></a>
 				<div class="dropdown">
 				  <ul>
-					<li class="dropdown-link"><a href="pages/blog1.html">Blog 1</a></li>
+					<li class="dropdown-link"><a href="blog1.html">Blog 1</a></li>
 					<li class="dropdown-link"><a href="#">Blog 2</a></li>
 					<li class="dropdown-link"><a href="#">Blog 3</a></li>
 					<div class="arrow"></div>
