--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@
         <ul>
           <!-- Home -->
           <li class="nav-link" style="--i: .6s">
-            <a href="../index.html">Home</a>
+            <a href="index.html">Home</a>
           </li>
 
           <!-- Company -->
