--- a/blog1.html
+++ b/blog1.html
@@ -31,7 +31,7 @@
 
       <!-- Navigation Links -->
       <nav class="hidden md:flex space-x-6">
-        <a href="../index.html" class="text-white hover:text-green-300 transition duration-300">Home</a>
+        <a href="index.html" class="text-white hover:text-green-300 transition duration-300">Home</a>
         <a href="about.html" class="text-white hover:text-green-300 transition duration-300">About Us</a>
         
         <!-- Services Dropdown -->
@@ -66,7 +66,7 @@
     <!-- Mobile Menu -->
     <div id="mobile-menu" class="md:hidden bg-green-800 text-white hidden">
       <ul class="space-y-4 py-4">
-        <li><a href="../index.html" class="block px-4 py-2">Home</a></li>
+        <li><a href="index.html" class="block px-4 py-2">Home</a></li>
         <li><a href="about.html" class="block px-4 py-2">About Us</a></li>
 
         <!-- Mobile Services Dropdown -->
