--- a/blog1.html
+++ b/blog1.html
@@ -35,7 +35,7 @@
         <ul>
           <!-- Home -->
           <li class="nav-link" style="--i: .6s">
-            <a href="../index.html">Home</a>
+            <a href="index.html">Home</a>
           </li>
 
           <!-- Company -->
