--- a/marketing.html
+++ b/marketing.html
@@ -26,7 +26,7 @@
         <ul>
           <!-- Home -->
           <li class="nav-link" style="--i: .6s">
-            <a href="marketing/index.html">Home</a>
+            <a href="index.html">Home</a>
           </li>
 
           <!-- Company -->
