--- a/developer.html
+++ b/developer.html
@@ -20,78 +20,109 @@
 	  
 </head>
 <body>
-	<header class="relative top-0 bg-gray-700 z-50 shadow-lg">
-    <div class="container mx-auto flex items-center justify-between px-4 py-3">
-      <!-- Logo -->
-      <div class="text-white text-2xl font-semibold">
-        Brand<span class="font-light">Name</span>
-      </div>
+	<nav class="navbar">
+  <header>
+  <div class="container">
+    <input type="checkbox" name="check" id="check">
+    <div class="logo-container">
+      <h3 class="logo">Brand<span>Name</span></h3>
+    </div>
 
-      <!-- Navigation Links -->
-      <nav class="hidden md:flex space-x-6">
-        <a href="index.html" class="text-white hover:text-green-300 transition duration-300">Home</a>
-        <a href="about.html" class="text-white hover:text-green-300 transition duration-300">About Us</a>
-        
-        <!-- Services Dropdown -->
-        <div class="relative group">
-          <a href="#" class="text-white hover:text-green-300 transition duration-300">Services</a>
-          <div class="absolute left-0 hidden group-hover:block bg-green-800 text-white w-40 mt-2 space-y-2 p-2 rounded-md group-focus-within:block transition-opacity duration-200 delay-150 opacity-0 group-hover:opacity-100">
-            <a href="marketing.html" class="block px-3 py-2">Digital Marketing</a>
-            <a href="developer.html" class="block px-3 py-2">Software Development</a>
-          </div>
-        </div>
+    <div class="nav-btn">
+      <div class="nav-links">
+        <ul>
+          <!-- Home -->
+          <li class="nav-link" style="--i: .6s">
+            <a href="../index.html">Home</a>
+          </li>
 
-        <!-- Blogs Dropdown -->
-        <div class="relative group">
-          <a href="#" class="text-white hover:text-green-300 transition duration-300">Blogs</a>
-          <div class="absolute left-0 hidden group-hover:block bg-green-800 text-white w-40 mt-2 space-y-2 p-2 rounded-md group-focus-within:block transition-opacity duration-200 delay-150 opacity-0 group-hover:opacity-100">
-            <a href="blog1.html" class="block px-3 py-2">Blog 1</a>
-            <a href="#" class="block px-3 py-2">Blog 2</a>
-            <a href="#" class="block px-3 py-2">Blog 3</a>
-          </div>
-        </div>
-      </nav>
+          <!-- Company -->
+          <li class="nav-link" style="--i: .85s">
+            <a href="about.html">About Us</a>
+       <!-- <div class="dropdown">
+              <ul>
+                <li class="dropdown-link">
+                  <a href="#">About Us<i class="fas fa-caret-down"></i></a>
+                  <div class="dropdown second">
+                    <ul>
+                      <li class="dropdown-link"><a href="#">Our Team</a></li>
+                      <li class="dropdown-link"><a href="#">Our Vision</a></li>
+                      <li class="dropdown-link"><a href="#">Our History</a></li>
+                      <div class="arrow"></div>
+                    </ul>
+                  </div>
+                </li>
+                <li class="dropdown-link"><a href="#">Careers</a></li>
+                <li class="dropdown-link"><a href="#">Contact Us</a></li>
+                <div class="arrow"></div>
+              </ul>
+            </div>  -->
+          </li>
 
-      <!-- Hamburger Menu for Mobile -->
-      <div class="md:hidden">
-        <button id="menu-toggle" class="text-white">
-          <!-- Hamburger icon using Font Awesome -->
-          <i class="fas fa-bars"></i>
-        </button>
+          <!-- Services -->
+          <li class="nav-link" style="--i: 1.1s">
+            <a href="#">Services<i class="fas fa-caret-down"></i></a>
+            <div class="dropdown">
+              <ul>
+                <li class="dropdown-link">
+				  <a href="marketing.html">Digital Marketing</a>
+            <!-- <div class="dropdown second">
+                    <ul>
+                      <li class="dropdown-link"><a href="#">Search Engine Optimization (SEO)</a></li>
+                      <li class="dropdown-link"><a href="#">Search Engine Marketing (SEM)</a></li>
+                      <li class="dropdown-link"><a href="#">Pay Per Click Advertising</a></li>
+                      <li class="dropdown-link"><a href="#">Social Media Management</a></li>
+                      <li class="dropdown-link"><a href="#">Social Media Marketing Campaigns</a></li>
+                      <li class="dropdown-link"><a href="#">Email Outreach Programs</a></li>
+                      <li class="dropdown-link"><a href="#">Onsite & Offsite Marketing</a></li>
+                      <li class="dropdown-link"><a href="#">Content Creation and Optimization</a></li>
+                      <li class="dropdown-link"><a href="#">Custom Collateral Design and Branding Elements</a></li>
+                      <li class="dropdown-link"><a href="#">Quality Link Building</a></li>
+                      <li class="dropdown-link"><a href="#">Local Specific Online Marketing</a></li>
+                      <li class="dropdown-link"><a href="#">And More!</a></li>
+                      <div class="arrow"></div>
+                    </ul>
+                  </div>  -->
+                </li>
+                <li class="dropdown-link">
+                  <a href="developer.html">Software Development</a>
+           <!--     <div class="dropdown second">
+                    <ul>
+                      <li class="dropdown-link"><a href="#">Website Development</a></li>
+                      <li class="dropdown-link"><a href="#">App Development</a></li>
+                      <div class="arrow"></div>
+                    </ul>
+                  </div>  -->
+                </li>
+                <div class="arrow"></div>
+              </ul>
+            </div>
+          </li>
+
+          <!-- Blogs -->
+          <li class="nav-link" style="--i: 1.35s">
+            <a href="#">Blogs<i class="fas fa-caret-down"></i></a>
+            <div class="dropdown">
+              <ul>
+                <li class="dropdown-link"><a href="blog1.html">Blog 1</a></li>
+                <li class="dropdown-link"><a href="#">Blog 2</a></li>
+                <li class="dropdown-link"><a href="#">Blog 3</a></li>
+                <div class="arrow"></div>
+              </ul>
+            </div>
+          </li>
+        </ul>
       </div>
     </div>
 
-    <!-- Mobile Menu -->
-    <div id="mobile-menu" class="md:hidden bg-green-800 text-white hidden">
-      <ul class="space-y-4 py-4">
-        <li><a href="index.html" class="block px-4 py-2">Home</a></li>
-        <li><a href="about.html" class="block px-4 py-2">About Us</a></li>
-
-        <!-- Mobile Services Dropdown -->
-        <li class="relative">
-          <button class="block px-4 py-2 text-white hover:text-green-300" id="services-toggle">
-            Services
-          </button>
-          <ul id="services-dropdown" class="hidden bg-green-800 text-white w-40 mt-2 space-y-2 p-2 rounded-md">
-            <li><a href="marketing.html" class="block px-3 py-2">Digital Marketing</a></li>
-            <li><a href="developer.html" class="block px-3 py-2">Software Development</a></li>
-          </ul>
-        </li>
-
-        <!-- Mobile Blogs Dropdown -->
-        <li class="relative">
-          <button class="block px-4 py-2 text-white hover:text-green-300" id="blogs-toggle">
-            Blogs
-          </button>
-          <ul id="blogs-dropdown" class="hidden bg-green-800 text-white w-40 mt-2 space-y-2 p-2 rounded-md">
-            <li><a href="blog1.html" class="block px-3 py-2">Blog 1</a></li>
-            <li><a href="#" class="block px-3 py-2">Blog 2</a></li>
-            <li><a href="#" class="block px-3 py-2">Blog 3</a></li>
-          </ul>
-        </li>
-      </ul>
+    <div class="hamburger-menu-container">
+      <div class="hamburger-menu">
+        <div></div>
+      </div>
     </div>
-  </header>
+  </div>
+</header>
+</nav>
 
 <section class="font-sans bg-gray-50 text-gray-800">
     <!-- Hero Section -->
